resolve profile problem and add rxjava2introp to solve hystrix problem and refactor apiclient templates
